@@ -30,7 +30,7 @@ dependencies {
     implementation 'commons-net:commons-net:3.10.0'
     implementation 'com.github.samtools:htsjdk:3.0.5'
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
-    implementation 'org.apache.logging.log4j:log4j-core:2.21.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.22.0'
     implementation 'com.oracle.database.jdbc:ojdbc10:19.21.0.0'
     implementation 'org.springframework:spring-jdbc:6.0.14'
 
