@@ -2,41 +2,41 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.gff3.Manager">
-        <property name="version" value="--Gff3 generation pipeline -- build Nov 28, 2023 --" />
+        <property name="version" value="--Gff3 generation pipeline -- build Dec 05, 2023 --" />
 
         <property name="assemblies"><!-- file system location for files for given assembly: must be the same as found in '/ref/fasta' directory -->
             <map>
-                <entry key="372" value="data/jbrowse2/Rat/rn7.2" />
-                <entry key="360" value="data/jbrowse2/Rat/rn6" />
-                <entry key= "70" value="data/jbrowse2/Rat/rn5" />
-                <entry key= "60" value="data/jbrowse2/Rat/rn3.4" />
+                <entry key="372" value="data/jbrowse2/Rat" />
+                <entry key="360" value="data/jbrowse2/Rat" />
+                <entry key= "70" value="data/jbrowse2/Rat" />
+                <entry key= "60" value="data/jbrowse2/Rat" />
 
-                <entry key="239" value="data/jbrowse2/Mouse/mm39" />
-                <entry key= "35" value="data/jbrowse2/Mouse/mm38" />
-                <entry key= "18" value="data/jbrowse2/Mouse/mm37" />
+                <entry key="239" value="data/jbrowse2/Mouse" />
+                <entry key= "35" value="data/jbrowse2/Mouse" />
+                <entry key= "18" value="data/jbrowse2/Mouse" />
 
-                <entry key= "38" value="data/jbrowse2/Human/hg38" />
-                <entry key= "17" value="data/jbrowse2/Human/hg19" />
-                <entry key= "13" value="data/jbrowse2/Human/hg18" />
+                <entry key= "38" value="data/jbrowse2/Human" />
+                <entry key= "17" value="data/jbrowse2/Human" />
+                <entry key= "13" value="data/jbrowse2/Human" />
 
-                <entry key="911" value="data/jbrowse2/Pig/susScr11" />
-                <entry key="910" value="data/jbrowse2/Pig/susScr3" />
+                <entry key="911" value="data/jbrowse2/Pig" />
+                <entry key="910" value="data/jbrowse2/Pig" />
 
-                <entry key="634" value="data/jbrowse2/Dog/ROS_Cfam_1.0" />
-                <entry key="631" value="data/jbrowse2/Dog/canFam3" />
+                <entry key="634" value="data/jbrowse2/Dog" />
+                <entry key="631" value="data/jbrowse2/Dog" />
 
-                <entry key="1313" value="data/jbrowse2/Green Monkey/veroWho" />
-                <entry key="1311" value="data/jbrowse2/Green Monkey/chlSab2" />
+                <entry key="1313" value="data/jbrowse2/Green Monkey" />
+                <entry key="1311" value="data/jbrowse2/Green Monkey" />
 
-                <entry key="1410" value="data/jbrowse2/Naked Mole-Rat/hetGla2" />
+                <entry key="1410" value="data/jbrowse2/Naked Mole-Rat" />
 
-                <entry key="44" value="data/jbrowse2/Chinchilla/chiLan1" />
+                <entry key="44" value="data/jbrowse2/Chinchilla" />
 
-                <entry key="720" value="data/jbrowse2/Squirrel/speTri2" />
-                <entry key="722" value="data/jbrowse2/Squirrel/hicItri2" />
+                <entry key="720" value="data/jbrowse2/Squirrel" />
+                <entry key="722" value="data/jbrowse2/Squirrel" />
 
-                <entry key="511" value="data/jbrowse2/Bonobo/panPan2" />
-                <entry key="513" value="data/jbrowse2/Bonobo/panPan3" />
+                <entry key="511" value="data/jbrowse2/Bonobo" />
+                <entry key="513" value="data/jbrowse2/Bonobo" />
             </map>
         </property>
     </bean>
