@@ -1,3 +1,6 @@
+Dec 05, 2023
+  jbrowse2: gff3 dir name must be same as assembly RefSeq name
+
 Nov 28, 2023
   jbrowse2: fixed script to create dir for uth files
 
